[2017-07-18 19:20:49 +0200]  Use deepin-system-monitor as it seems to work now                          karasu      {07016aa4}
[2017-07-17 15:51:22 +0200]  Merge a11y branch. Labels got uglier but they need text to be read ..      karasu      {c45d055f}
[2017-07-17 14:04:24 +0200]  Add a11y icon                                                              karasu      {54586aaf}
[2017-07-10 18:36:59 +0200]  Do not allow using Fat32 or NTFS for / and /home                           karasu      {5911b319}
[2017-07-09 17:00:23 +0200]  update packages.xml (deepin)                                               karasu      {9e9ce0e3}
[2017-07-09 16:59:13 +0200]  Update packages.xml (deepin)                                               karasu      {36e8afa1}
[2017-07-08 11:29:30 +0200]  Update packages.xml (deepin)                                               karasu      {573c63e3}
[2017-07-08 11:29:10 +0200]  Update packages.xml                                                        karasu      {c6ce7a80}
[2017-07-08 11:27:18 +0200]  Updated deepin packages (again)                                            karasu      {571fa777}
[2017-07-06 23:27:11 +0200]  Removed package (deepin)                                                   karasu      {105bcdb8}
[2017-07-06 23:26:38 +0200]  Removed package                                                            karasu      {97b8e7c4}
[2017-07-06 16:23:12 +0200]  Install tlp by default                                                     karasu      {ebc17b01}
[2017-07-06 16:20:58 +0200]  Install tlp by default. Fixes #759                                         karasu      {375129cc}
[2017-07-05 17:19:28 +0200]  Update packages.xml (deepin)                                               karasu      {1e1bfdff}
[2017-07-05 17:18:25 +0200]  update deepin packages list                                                karasu      {ea5e50c9}